Bug 544556 - [12] [codegen] Switch expression - Operand Stack Overflow - nested
Change-Id: Id9c72d5d9317011ec0e60ed3a391a75c0217bfa3